fixed the black box that overlapped the feedback text.

--- a/static/place_details.css
+++ b/static/place_details.css
@@ -1,4 +1,6 @@
-/* place_details.css */
+/* place_details.css*/
+
+/* Author: Sahil Adhikari, sa3933 */
 
 /* Styles for Place Details Page */
 
@@ -9,36 +11,37 @@ body {
 }
 
 /* Navigation bar styles */
-.logo{
-  height: 70px; 
-  width: 70px; 
+.logo {
+    height: 70px;
+    width: 70px;
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    display: flex;
+    
 }
 
-li {
-  float: left;
+nav li {
+    flex: 1; /* Ensure all list items have equal space */
 }
 
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  width: 250px;
+nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 12px;
+    text-decoration: none;
 }
 
-li a:hover {
-  background-color: #111;
+nav li a:hover {
+    background-color: #111;
 }
-
 /* Style place image */
 .place-image {
     width: 100%; /* Set width to fill container */
